--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
     <head>
         <title>Landing Page</title>
         <link rel="stylesheet" href="./assests/style/main.css"/>
+        <link rel="stylesheet" href="./assests/style/base.css"/>
     </head>
     <body>
       <header class="header">
         <div class="container">
             <div class="row">
                 <div class="logo">
-                    <img src="./assests/Logo.svg"/>
+                    <img width="30px" src="./assests/Logo.svg"/>
                     <a href="#">mangcoding Store</a>
                 </div>
                 <nav class="nav">
                     <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="#" class="active">Home</a>
                         </li>
                         <li>
                             <a href="#">Course</a>
