--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <link rel="stylesheet" href="./assests/style/main.css"/>
         <link rel="stylesheet" href="./assests/style/base.css"/>
     </head>
-    <body>
-      <header class="header">
+    <header class="header">
         <div class="container">
             <div class="row">
                 <div class="logo">
-                    <img width="30px" src="./assests/Logo.svg"/>
+                    <img width="30px" src="./assests/Public/Logo.svg"/>
                     <a href="#">mangcoding Store</a>
                 </div>
                 <nav class="nav">
@@ -39,6 +38,107 @@
                 </div>
             </div>
         </div>
-      </header>
+    </header>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-start">
+                    <div class="logo">
+                        <img src="./assests/Public/LogoFooter.svg"/>
+                        <a href="#">mangcoding Store</a>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi neque illo aperiam, maxime explicabo saepe possimus vel repudiandae modi quo alias inventore qui reiciendis, pariatur eligendi debitis libero rem quibusdam numquam facilis fugit animi. Cupiditate.
+                    </p>
+                    <div class="icons">
+                        <a href="https://facebook.com">
+                            <img src="assests/icons/facebok.svg"/>
+                        </a>
+                        <a href="https://x.com/">
+                            <img src="assests/icons/Twitter.svg"/>
+                        </a>
+                        <a href="www.linkedin.com/in/amra-sawalha">
+                            <img src="assests/icons/linkedin.svg"/>
+                        </a>
+                        <a href="https://www.instagram.com/">
+                            <img src="assests/icons/instagram.svg"/>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-end">
+                    <div class="row">
+                        <div class="footer-item">
+                            <h2>Home</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">Product</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Course</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">About us</a>
+                                    </li>
+                                    <li>
+                                        <a href="">Log in</a>    
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="footer-item">
+                            <h2>Course</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">HTML & CSS</a>    
+                                    </li>
+                                    <li>
+                                        <a href="#">Javascript</a>    
+                                    </li>
+                                    <li>
+                                        <a href="#">Fotographer</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Desain Grafis</a>
+                                    </li>
+                                </ul>
+                            </nav>
+
+                        </div>
+                        <div class="footer-item">
+                            <h2>Article</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">New</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Old</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Trend</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Popular</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="footer-item">
+                            <h2>Contact Us</h2>
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#">CCdoc123@gmail.com</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     </body>
 </html>
