--- a/index.html
+++ b/index.html
@@ -39,6 +39,62 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="testimonials">
+            <h2>Testimonials</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="testimonial">
+                        <div class="user-info">
+                            <div class="row">
+                                <img src="./assests/images/me.jpeg" alt="this is me"/>
+                                <div class="user-data">
+                                    <h3>Amra Sawalha</h3>
+                                    <span>Client</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="rating">
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                            </div>
+                        </div>
+                        <blockquote>
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum perferendis alias, aspernatur at quos ipsa repudiandae ab amet soluta voluptates?"</p>
+                        </blockquote>
+                    </div>
+                    <div class="testimonial">
+                        <div class="user-info">
+                            <div class="row">
+                                <img src="./assests/images/me.jpeg" alt="this is me"/>
+                                <div class="user-data">
+                                    <h3>Amra Sawalha</h3>
+                                    <span>Client</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="rating">
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                                <img src="./assests/icons/Star.svg" alt="star"/>
+                            </div>
+                        </div>
+                        <blockquote>
+                            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum perferendis alias, aspernatur at quos ipsa repudiandae ab amet soluta voluptates?"</p>
+                        </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
