--- a/index.html
+++ b/index.html
@@ -40,20 +40,34 @@
         </div>
     </header>
     <main>
-        <!-- <section class="services">
+        <section class="services">
             <div class="container">
                 <div class="row">
                     <div class="services-start">
                         <span>what we give</span>
                         <h2>What do You <br> Get From Us</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi velit, quos ut tempore quaerat accusamus minima. Enim sit corrupti sunt numquam vitae nihil consequatur id minus vel adipisci eveniet, quasi accusantium ex aperiam pariatur maxime.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi velit, quos ut tempore quaerat accusamus minima. Enim sit corrupti sunt numquam vitae nihil .</p>
                     </div>
                     <div class="services-end">
-                        
+                        <div class="service">
+                            <img src="./assests/icons/professional-teacher.svg"/>
+                            <h3>Professional Teacher</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, earum vitae commodi, perspiciatis incidunt fugiat accusamus eos debitis laudantium ipsum praesentium!  et commodi.</p>
+                        </div>
+                        <div class="service">
+                            <img src="./assests/icons/course-certificate.svg"/>
+                            <h3>Course Certificate</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, earum vitae commodi, perspiciatis incidunt fugiat accusamus eos debitis laudantium ipsum praesentium!  et commodi.</p>
+                        </div>
+                        <div class="service">
+                            <img src="./assests/icons/interesting-learning.svg"/>
+                            <h3>interesting learning</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, earum vitae commodi, perspiciatis incidunt fugiat accusamus eos debitis laudantium ipsum praesentium!  et commodi.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <section class="selected-courses">
             <div class="container">
                 <div class="row">
