buttons in service section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="buttons">
+                    <div class="button">
+                        <span> < </span>
+                    </div>
+                    <div class="button">
+                        <span> > </span>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="selected-courses">
