--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
         </div>
     </header>
     <main>
+        <section class="register">
+            <div class="container">
+                <div class="row">
+                    <div class="register-start">
+                        <span>Let's <i>begin</i></span>
+                        <h2>Let's Find The <br> Right <span>Course</span> For<br> you</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur tempora fugit, sunt rerum consequuntur tempore?</p>
+                        <div class="register-buttons">
+                            <a href="#"> register</a>
+                            <div class="playVideo-button">
+                                <a href="#"><img src="./assests/icons/playButton.svg" /> </a>
+                                <p>Play Video</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="register-end">
+                        <img src="./assests/images/register.svg" />
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="services">
             <div class="container">
                 <div class="row">
@@ -68,10 +89,12 @@
                 </div>
                 <div class="buttons">
                     <div class="button">
-                        <span> < </span>
+                        <a href="#"> <img src="./assests/icons/triangular-braces.svg" /> </a>
                     </div>
                     <div class="button">
-                        <span> > </span>
+                       <div class="rotate-button">
+                        <a href="#"> <img src="./assests/icons/triangular-braces.svg" /> </a>
+                       </div> 
                     </div>
                 </div>
             </div>
