responsive first two sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Landing Page</title>
         <link rel="stylesheet" href="./assests/style/main.css"/>
         <link rel="stylesheet" href="./assests/style/base.css"/>
+        <meta name="viewport" content="width=device-width" initial-scale="1.0" />
     </head>
     <header class="header">
         <div class="container">
@@ -31,6 +32,7 @@
                         </li>
                     </ul>
                 </nav>
+                <svg class="burger-menu" width="20px" height="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
                 <div class="auth">
                     <a href="#">Login</a>
                     <a href="#">Register</a>
@@ -45,7 +47,7 @@
                 <div class="row">
                     <div class="register-start">
                         <span>Let's <i>begin</i></span>
-                        <h2>Let's Find The <br> Right <span>Course</span> For<br> you</h2>
+                        <h2>Let's Find The Right <span>Course</span> For you</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur tempora fugit, sunt rerum consequuntur tempore?</p>
                         <div class="register-buttons">
                             <a href="#"> register</a>
