--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="services-start">
                         <span>what we give</span>
-                        <h2>What do You <br> Get From Us</h2>
+                        <h2>What do You Get From Us</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi velit, quos ut tempore quaerat accusamus minima. Enim sit corrupti sunt numquam vitae nihil .</p>
                     </div>
                     <div class="services-end">
@@ -130,7 +130,6 @@
             </div>
         </section>
         <section class="available-courses">
-            
                 <div class="container">
                     <div class="row">
                         <div class="available-courses-start">
